# Personal

./: .gitignore
EnvironmentWatcher/: README.md  pyproject.toml
EnvironmentWatcher/src/: mqtt2db.py  web_server.py
EnvironmentWatcher/src/environmentwatcher/: __init__.py
EnvironmentWatcherDocker/: docker-compose.yml
EnvironmentWatcherDocker/mariadb/: Dockerfile  init.sql
EnvironmentWatcherDocker/mqtt2db/: Dockerfile  mqtt2db.py
EnvironmentWatcherDocker/web_server/: Dockerfile  requirements.txt  web_server.py
EnvironmentWatcherDocker/web_server/templates/: index.html
JavascriptPractice/Calculator/: calculator.html  detail.txt
JavascriptPractice/Calculator/css/: style.css
Sample_React/: officialTutorial.js
WebApplication/DjangoProject/: detail.txt  docker-compose.yml
WebApplication/DjangoProject/postgres/: Dockerfile
WebApplication/DjangoProject/python/: Dockerfile  requirements.txt
WebApplication/DjangoProject_before/: detail.txt
WebApplication/DjangoProject_before/python/: requirements.txt
WebApplication/MyDiaryProject/: README.txt
WebApplication/MyDiaryProject/accounts/: models.py
WebApplication/MyDiaryProject/config/: settings.py  urls.py
WebApplication/MyDiaryProject/diary/: admin.py  forms.py  models.py  urls.py  views.py
WebApplication/MyDiaryProject/templates/: base.html  diary_create.html  diary_delete.html  (+5 more)
WebApplication/app/: detail.txt  docker-compose.yml
WebApplication/kanban/: memo.txt  package-lock.json
WebApplication/mysite/: memo.txt
mariadb_template/: Dockerfile  detail.txt  docker-compose.yml  init.sql
(+59 files in other folders)
